2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* demos/Makefile.am
	* demos/images/hbbox.png: remove ugly solid black image
	* demos/images/hbbox-*.png: use proper mask for the corners
	* demos/buttonbox.gtkrc: use the all-round image as fallback

2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image): Add missing cast for
	gtk_container_get_children

2007-04-17  Xan Lopez  <xan.lopez@nokia.com>

	* README:
	* demos/buttonbox.gtkrc:

	Update the documentation and the demo to take into account maemo-position-theming.
	
2007-04-17  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c (draw_simple_image): Check that the maemo-position-theming
	property exists before accessing it.

2007-04-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c (draw_simple_image): Don't take internal children
	into account for the position theming.

2007-04-13  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c: Add general positioning theming based on GTK+
	"maemo-position-theming" style property.

2007-04-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/treeview.c (create_treeview): Enable rubberbanding only with
	gtk >= 2.10.0

2007-04-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (maybe_check_button_position): rename to
	check_child_position and generalize to handle a list of widgets.
	(check_buttonbox_child_position): new function to get the list of
	child widgets from buttonbox
	(draw_simple_image): adapt to use the new function 

2007-03-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.91.3 ===

2007-03-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* Makefile.am (EXTRA_DIST): Remove forgotten NEWS.pixbuf
	* src/Makefile.am (EXTRA_DIST): Remove forgotten README.pixbuf and
	README.server

2007-03-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (maybe_check_submenu_state, draw_box):